--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.1.0/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" />
 </head>
 
 <body>
@@ -31,7 +31,67 @@
         </div>
     </header>
     <main></main>
-    <footer></footer>
+    <footer class="background-black">
+        <div class="footer-container text-white">
+            <ul class="ul-box">
+                <li>
+                    <h3 class="text-white h3-padding">Dropbox</h3>
+                </li>
+                <li><a class="text-white" href="">Applicazione dekstop</a></li>
+                <li><a class="text-white" href="">Perché Dropbox</a></li>
+                <li><a class="text-white" href="">Piani</a></li>
+                <li><a class="text-white" href="">Sicurezza</a></li>
+                <li><a class="text-white" href="">Funzioni</a></li>
+            </ul>
+            <ul class="ul-box">
+                <li>
+                    <h3 class="text-white h3-padding">Prodotti</h3>
+                </li>
+                <li><a class="text-white" href="">Applicazione dekstop</a></li>
+                <li><a class="text-white" href="">Perché Dropbox</a></li>
+                <li><a class="text-white" href="">Piani</a></li>
+                <li><a class="text-white" href="">Sicurezza</a></li>
+                <li><a class="text-white" href="">Funzioni</a></li>
+            </ul>
+            <ul class="ul-box">
+                <li>
+                    <h3 class="text-white h3-padding">Azienda</h3>
+                </li>
+                <li><a class="text-white" href="">Applicazione dekstop</a></li>
+                <li><a class="text-white" href="">Perché Dropbox</a></li>
+                <li><a class="text-white" href="">Piani</a></li>
+                <li><a class="text-white" href="">Sicurezza</a></li>
+                <li><a class="text-white" href="">Funzioni</a></li>
+            </ul>
+            <ul class="ul-box">
+                <li>
+                    <h3 class="text-white h3-padding">Supporto</h3>
+                </li>
+                <li><a class="text-white" href="">Applicazione dekstop</a></li>
+                <li><a class="text-white" href="">Perché Dropbox</a></li>
+                <li><a class="text-white" href="">Piani</a></li>
+                <li><a class="text-white" href="">Sicurezza</a></li>
+                <li><a class="text-white" href="">Funzioni</a></li>
+            </ul>
+            <ul class="ul-box">
+                <li>
+                    <h3 class="text-white h3-padding">Community</h3>
+                </li>
+                <li><a class="text-white" href="">Applicazione dekstop</a></li>
+                <li><a class="text-white" href="">Perché Dropbox</a></li>
+                <li><a class="text-white" href="">Piani</a></li>
+                <li><a class="text-white" href="">Sicurezza</a></li>
+                <li><a class="text-white" href="">Funzioni</a></li>
+            </ul>
+        </div>
+        <div class="italiano">
+                <p><i class="fa-solid fa-earth-americas"></i> Italiano<i class="fa-solid fa-caret-up"></i></p>
+            </div>
+        
+
+
+
+    </footer>
 </body>
 
 </html>
