add: section 1 completata html e css

--- a/index.html
+++ b/index.html
@@ -26,11 +26,34 @@
                 <a href="">Supporto</a>
                 <a href="">Contatta l'ufficio vendite</a>
                 <a href="">Accedi</a>
-                <a class="inizia" href="">Inizia</a>
+                <a class="btn" href="">Inizia</a>
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section class="background-azure">
+            <h1 class="title">Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
+            <div class="section-1-container">
+                <div class="section-1-text-container">
+                    <p class="text">Finalmente tutti i tuoi strumenti, contenuti e <br>collaboratori sono accessibili dallo stesso
+                        posto. <br>Dropbox Business è più di uno spazio di <br>archiviazione sicuro: è un modo
+                        intelligente e <br>integrato per ottimizare il flusso di lavoro <br>esistente.</p>
+                        <div>
+                        <a class="btn" href="">Inizia la tua prova gratuita</a>
+                        </div>
+                        <div>
+                        <p>Annulla in qualsiasi momento</p>
+                        </div>
+                        <div>
+                        <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                </div>
+                <div>
+                    <img class="jumbo" src="./imgs/jumbo.png" alt="jumbo">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class="background-black">
         <div class="footer-container text-white">
             <ul class="ul-box">
@@ -85,9 +108,9 @@
             </ul>
         </div>
         <div class="italiano">
-                <p><i class="fa-solid fa-earth-americas"></i> Italiano<i class="fa-solid fa-caret-up"></i></p>
-            </div>
-        
+            <p><i class="fa-solid fa-earth-americas"></i> Italiano<i class="fa-solid fa-caret-up"></i></p>
+        </div>
+
 
 
 
