add: section 2 e section 3 html e css

--- a/index.html
+++ b/index.html
@@ -35,21 +35,135 @@
             <h1 class="title">Tutto ciò che ti serve per il <br> lavoro, in un unico posto</h1>
             <div class="section-1-container">
                 <div class="section-1-text-container">
-                    <p class="text">Finalmente tutti i tuoi strumenti, contenuti e <br>collaboratori sono accessibili dallo stesso
+                    <p class="text">Finalmente tutti i tuoi strumenti, contenuti e <br>collaboratori sono accessibili
+                        dallo stesso
                         posto. <br>Dropbox Business è più di uno spazio di <br>archiviazione sicuro: è un modo
                         intelligente e <br>integrato per ottimizare il flusso di lavoro <br>esistente.</p>
-                        <div>
+                    <div>
                         <a class="btn" href="">Inizia la tua prova gratuita</a>
-                        </div>
-                        <div>
+                    </div>
+                    <div>
                         <p>Annulla in qualsiasi momento</p>
-                        </div>
-                        <div>
+                    </div>
+                    <div>
                         <i class="fa-solid fa-arrow-down"></i>
-                        </div>
+                    </div>
                 </div>
                 <div>
                     <img class="jumbo" src="./imgs/jumbo.png" alt="jumbo">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="business-container">
+                <h2 class="plan-title">Trova il piano business che fa per te</h2>
+                <p class="radio"><input type="radio" name="fatturazione" value="mensile" checked>
+                    Fatturazione mensile<input type="radio" name="fatturazione" value="annuale">
+                    Fatturazione annuale</p>
+            </div>
+            <div class="cards-container">
+                <div class="card">
+                    <div class="card-header">
+                        <p><i class="fa-solid fa-user"></i> Singolo</p>
+                    </div>
+                    <div class="card-text">
+                        <h3>Professional</h3>
+                        <p>&euro; 12.00</p>
+                        <p>/mese</p>
+                        <p><i class="fa-solid fa-user"></i> 1 utente</p>
+                        <p><i class="fa-solid fa-folder"></i> 5 TB di spazio di archiviazione sicuro</p>
+                        <p><i class="fa-solid fa-share-nodes"></i> Funzioni di produttività premium e condivisione file
+                            semplice e sicura</p>
+                        <div>
+                            <a class="btn" href="">Prova gratis per 30 giorni</a>
+                        </div>
+                        <p>oppure <a class="buy-now" href="">acquista ora</a></p>
+                        <div class="line"></div>
+                        <p><strong>Punti Salienti del piano</strong></p>
+                        <p><i class="fa-solid fa-check"></i> Invia file fino a 100 GB con Dropbox Transfert</p>
+                        <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <p><i class="fa-solid fa-users"></i> Team</p>
+                    </div>
+                    <div class="card-text">
+                        <h3>Advanced</h3>
+                        <p>&euro; 18.00</p>
+                        <p>/utente/mese</p>
+                        <p><i class="fa-solid fa-users"></i> 3 o più utenti</p>
+                        <p><i class="fa-solid fa-folder"></i> Tutto lo spazio di cui ha bisogno il tuo team</p>
+                        <p><i class="fa-solid fa-share-nodes"></i> Sofisticate funzioni di controllo e per tenere al
+                            sicuro tutti i file del tuo team</p>
+                        <div>
+                            <a class="btn" href="">Prova gratis per 30 giorni</a>
+                        </div>
+                        <p>oppure <a class="buy-now" href="">acquista ora</a></p>
+                        <div class="line"></div>
+                        <p><strong>Punti Salienti del piano</strong></p>
+                        <p><i class="fa-solid fa-check"></i> Nessun limite di spazio per i file</p>
+                        <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
+                        <p><i class="fa-solid fa-check"></i> Risparmio del 50% rispetto alle iscrizioni singole</p>
+                        <p><i class="fa-solid fa-check"></i> Possibilità di inserire nuovi membri del team</p>
+                        <p><i class="fa-solid fa-check"></i> Gestione dei permessi in base ai ruoli</p>
+
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <p><i class="fa-solid fa-building"></i> Azienda</p>
+                    </div>
+                    <div class="card-text">
+                        <h3>Enterprisse</h3>
+                        <p>Contattaci</p>
+                        <p>-</p>
+                        <p><i class="fa-solid fa-user"></i> 10 o più utenti</p>
+                        <p><i class="fa-solid fa-folder"></i> Soluzioni personalizzabili per la tua azzienda</p>
+                        <p><i class="fa-solid fa-share-nodes"></i> Assistenza personalizzata per aiutare gli
+                            amministratori in una gestione su larga scala</p>
+                        <div>
+                            <a class="btn" href="">Contattaci</a>
+                        </div>
+                        <p>oppure <a class="buy-now" href="">acquista ora</a></p>
+                        <div class="line"></div>
+                        <p><strong>Punti Salienti del piano</strong></p>
+                        <p><i class="fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</p>
+                        <p><i class="fa-solid fa-check"></i> Servizio assistenza 24/h</p>
+                        <p><i class="fa-solid fa-check"></i> Possibilità di personalizzazione totale</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="enterprise-card">
+                <div class="enterprise-header">
+                    <p><i class="fa-solid fa-building"></i> Team</p>
+                </div>
+                <div class="enterprise-text">
+                    <h3>Enterpise</h3>
+                    <p><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
+                    <div>
+                        <a class="btn2" href="">Contatta l'ufficio vendite</a>
+                    </div>
+                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su
+                        qualsiasi scala.</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="partner-container">
+                <div class="partner-img">
+                    <img src="./imgs/partner.png" alt="partner">
+                </div>
+                <div class="partner-text">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto continui.</p>
+                        <div class="margin-top">
+                        <a class="btn3" href="">Trova un partner</a>
+                        </div>
                 </div>
             </div>
         </section>
