add: section 4 e 5 html e css

--- a/index.html
+++ b/index.html
@@ -161,11 +161,64 @@
                     <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
                         raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e
                         supporto continui.</p>
-                        <div class="margin-top">
+                    <div class="margin-top">
                         <a class="btn3" href="">Trova un partner</a>
-                        </div>
+                    </div>
                 </div>
             </div>
+        </section>
+        <section>
+            <div class="business-title">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+            </div>
+            <div class="business-cards-container">
+                <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-switching-tools.png" alt="tools">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+                 <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-send-files-it.png" alt="send">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+                 <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-coordinate-it.png" alt="coordinate">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+                 <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-integrations-it.png" alt="integrations">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+                 <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-multi-device.png" alt="multidevice">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+                 <div class="business-card">
+                    <img class="business-img" src="./imgs/business-feature-security.png" alt="security">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox
+                        Paper direttaemnte da Dropbox.</p>
+                </div>
+            </div>
+        </section>
+        <section class="team-business">
+            <h2>Più di 500.000 team utilizzano <br>Dropbox Business</h2>
+            <a class="buy-now size-1" href="">Scopri di più sui nostri clienti</a>
         </section>
     </main>
     <footer class="background-black">
